--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,15 @@
 html {
   min-height: 100%;
-  position: relative;
+  position: ubuntu;
+}
+
+body{
+  font-family: lucida;
+  background-image: -webkit-linear-gradient(111deg, #e8c6c6 50%, #ebc7ab 50%);
+}
+
+h1{
+  font-family: Garamond;
 }
 
 .container-fluid {
@@ -15,22 +24,23 @@ html {
     margin-bottom: 0;
     font-size: 12px;
     letter-spacing: 5px;
+    background-color : #F7A4A4;
 }
 .navbar-nav  li a:hover {
-    color: #1abc9c !important;
+  color : white;
 }
 
 .footer-padding {
-	padding-bottom: 60px;
+	padding-bottom: 5%;
 }
 
 .footer {
-	position: absolute;
 	text-align: center;
-	bottom: 0;
-	width: 100%;
+  position: relative;
+  bottom: 30px;
+  width: 100%;
 	height: 60px;
-	background-color: #1abc9c;
+	background-color: #F7A4A4;
 }
 
 .footer p {
