--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@ html {
 
 body{
   font-family: lucida;
-  background-image: -webkit-linear-gradient(111deg, #e8c6c6 50%, #ebc7ab 50%);
+  background-image: -webkit-linear-gradient(111deg, #FAD6A5 50%, #fff 50%);
 }
 
 h1{
@@ -36,8 +36,8 @@ h1{
 
 .footer {
 	text-align: center;
-  position: relative;
-  bottom: 30px;
+  position : fixed;
+  bottom : 0;
   width: 100%;
 	height: 60px;
 	background-color: #F7A4A4;
